qt/gen_qiodevice.nim

proc fQIODevice_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QIODevice_virtualbase_connectNotify".}
proc fcQIODevice_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_connectNotify".}
proc fQIODevice_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QIODevice_virtualbase_disconnectNotify".}
proc fcQIODevice_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QIODevice_override_virtual_disconnectNotify".}
proc fcQIODevice_delete(self: pointer) {.importc: "QIODevice_delete".}


func init*(T: type QIODevice, h: ptr cQIODevice): QIODevice =
  T(h: h)
proc create*(T: type QIODevice, ): QIODevice =

  QIODevice.init(fcQIODevice_new())
proc create*(T: type QIODevice, parent: gen_qobject.QObject): QIODevice =

  QIODevice.init(fcQIODevice_new2(parent.h))
proc metaObject*(self: QIODevice, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQIODevice_metaObject(self.h))

proc metacast*(self: QIODevice, param1: cstring): pointer =

  fcQIODevice_metacast(self.h, param1)

proc metacall*(self: QIODevice, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQIODevice_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QIODevice, s: cstring): string =

  let v_ms = fcQIODevice_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QIODevice, s: cstring): string =

  let v_ms = fcQIODevice_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc openMode*(self: QIODevice, ): QIODeviceOpenModeFlag =

  QIODeviceOpenModeFlag(fcQIODevice_openMode(self.h))

proc setTextModeEnabled*(self: QIODevice, enabled: bool): void =

  fcQIODevice_setTextModeEnabled(self.h, enabled)

proc isTextModeEnabled*(self: QIODevice, ): bool =

  fcQIODevice_isTextModeEnabled(self.h)

proc isOpen*(self: QIODevice, ): bool =

  fcQIODevice_isOpen(self.h)

proc isReadable*(self: QIODevice, ): bool =

  fcQIODevice_isReadable(self.h)

proc isWritable*(self: QIODevice, ): bool =

  fcQIODevice_isWritable(self.h)

proc isSequential*(self: QIODevice, ): bool =

  fcQIODevice_isSequential(self.h)

proc readChannelCount*(self: QIODevice, ): cint =

  fcQIODevice_readChannelCount(self.h)

proc writeChannelCount*(self: QIODevice, ): cint =

  fcQIODevice_writeChannelCount(self.h)

proc currentReadChannel*(self: QIODevice, ): cint =

  fcQIODevice_currentReadChannel(self.h)

proc setCurrentReadChannel*(self: QIODevice, channel: cint): void =

  fcQIODevice_setCurrentReadChannel(self.h, channel)

proc currentWriteChannel*(self: QIODevice, ): cint =

  fcQIODevice_currentWriteChannel(self.h)

proc setCurrentWriteChannel*(self: QIODevice, channel: cint): void =

  fcQIODevice_setCurrentWriteChannel(self.h, channel)

proc open*(self: QIODevice, mode: QIODeviceOpenModeFlag): bool =

  fcQIODevice_open(self.h, cint(mode))

proc close*(self: QIODevice, ): void =

  fcQIODevice_close(self.h)

proc pos*(self: QIODevice, ): clonglong =

  fcQIODevice_pos(self.h)

proc size*(self: QIODevice, ): clonglong =

  fcQIODevice_size(self.h)

proc seek*(self: QIODevice, pos: clonglong): bool =

  fcQIODevice_seek(self.h, pos)

proc atEnd*(self: QIODevice, ): bool =

  fcQIODevice_atEnd(self.h)

proc reset*(self: QIODevice, ): bool =

  fcQIODevice_reset(self.h)

proc bytesAvailable*(self: QIODevice, ): clonglong =

  fcQIODevice_bytesAvailable(self.h)

proc bytesToWrite*(self: QIODevice, ): clonglong =

  fcQIODevice_bytesToWrite(self.h)

proc read*(self: QIODevice, data: cstring, maxlen: clonglong): clonglong =

  fcQIODevice_read(self.h, data, maxlen)

proc readWithMaxlen*(self: QIODevice, maxlen: clonglong): seq[byte] =

  var v_bytearray = fcQIODevice_readWithMaxlen(self.h, maxlen)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc readAll*(self: QIODevice, ): seq[byte] =

  var v_bytearray = fcQIODevice_readAll(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc readLine*(self: QIODevice, data: cstring, maxlen: clonglong): clonglong =

  fcQIODevice_readLine(self.h, data, maxlen)

proc readLine2*(self: QIODevice, ): seq[byte] =

  var v_bytearray = fcQIODevice_readLine2(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc canReadLine*(self: QIODevice, ): bool =

  fcQIODevice_canReadLine(self.h)

proc startTransaction*(self: QIODevice, ): void =

  fcQIODevice_startTransaction(self.h)

proc commitTransaction*(self: QIODevice, ): void =

  fcQIODevice_commitTransaction(self.h)

proc rollbackTransaction*(self: QIODevice, ): void =

  fcQIODevice_rollbackTransaction(self.h)

proc isTransactionStarted*(self: QIODevice, ): bool =

  fcQIODevice_isTransactionStarted(self.h)

proc write*(self: QIODevice, data: cstring, len: clonglong): clonglong =

  fcQIODevice_write(self.h, data, len)

proc writeWithData*(self: QIODevice, data: cstring): clonglong =

  fcQIODevice_writeWithData(self.h, data)

proc write2*(self: QIODevice, data: seq[byte]): clonglong =

  fcQIODevice_write2(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc peek*(self: QIODevice, data: cstring, maxlen: clonglong): clonglong =

  fcQIODevice_peek(self.h, data, maxlen)

proc peekWithMaxlen*(self: QIODevice, maxlen: clonglong): seq[byte] =

  var v_bytearray = fcQIODevice_peekWithMaxlen(self.h, maxlen)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc skip*(self: QIODevice, maxSize: clonglong): clonglong =

  fcQIODevice_skip(self.h, maxSize)

proc waitForReadyRead*(self: QIODevice, msecs: cint): bool =

  fcQIODevice_waitForReadyRead(self.h, msecs)

proc waitForBytesWritten*(self: QIODevice, msecs: cint): bool =

  fcQIODevice_waitForBytesWritten(self.h, msecs)

proc ungetChar*(self: QIODevice, c: cchar): void =

  fcQIODevice_ungetChar(self.h, c)

proc putChar*(self: QIODevice, c: cchar): bool =

  fcQIODevice_putChar(self.h, c)

proc getChar*(self: QIODevice, c: cstring): bool =

  fcQIODevice_getChar(self.h, c)

proc errorString*(self: QIODevice, ): string =

  let v_ms = fcQIODevice_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc readyRead*(self: QIODevice, ): void =

  fcQIODevice_readyRead(self.h)

proc miqt_exec_callback_QIODevice_readyRead(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onreadyRead*(self: QIODevice, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_readyRead(self.h, cast[int](addr tmp[]))
proc channelReadyRead*(self: QIODevice, channel: cint): void =

  fcQIODevice_channelReadyRead(self.h, channel)

proc miqt_exec_callback_QIODevice_channelReadyRead(slot: int, channel: cint) {.exportc.} =
  type Cb = proc(channel: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = channel


  nimfunc[](slotval1)

proc onchannelReadyRead*(self: QIODevice, slot: proc(channel: cint)) =
  type Cb = proc(channel: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_channelReadyRead(self.h, cast[int](addr tmp[]))
proc bytesWritten*(self: QIODevice, bytes: clonglong): void =

  fcQIODevice_bytesWritten(self.h, bytes)

proc miqt_exec_callback_QIODevice_bytesWritten(slot: int, bytes: clonglong) {.exportc.} =
  type Cb = proc(bytes: clonglong)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = bytes


  nimfunc[](slotval1)

proc onbytesWritten*(self: QIODevice, slot: proc(bytes: clonglong)) =
  type Cb = proc(bytes: clonglong)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_bytesWritten(self.h, cast[int](addr tmp[]))
proc channelBytesWritten*(self: QIODevice, channel: cint, bytes: clonglong): void =

  fcQIODevice_channelBytesWritten(self.h, channel, bytes)

proc miqt_exec_callback_QIODevice_channelBytesWritten(slot: int, channel: cint, bytes: clonglong) {.exportc.} =
  type Cb = proc(channel: cint, bytes: clonglong)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = channel

  let slotval2 = bytes


  nimfunc[](slotval1, slotval2)

proc onchannelBytesWritten*(self: QIODevice, slot: proc(channel: cint, bytes: clonglong)) =
  type Cb = proc(channel: cint, bytes: clonglong)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_channelBytesWritten(self.h, cast[int](addr tmp[]))
proc aboutToClose*(self: QIODevice, ): void =

  fcQIODevice_aboutToClose(self.h)

proc miqt_exec_callback_QIODevice_aboutToClose(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onaboutToClose*(self: QIODevice, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_aboutToClose(self.h, cast[int](addr tmp[]))
proc readChannelFinished*(self: QIODevice, ): void =

  fcQIODevice_readChannelFinished(self.h)

proc miqt_exec_callback_QIODevice_readChannelFinished(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onreadChannelFinished*(self: QIODevice, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQIODevice_connect_readChannelFinished(self.h, cast[int](addr tmp[]))
proc tr2*(_: type QIODevice, s: cstring, c: cstring): string =

  let v_ms = fcQIODevice_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QIODevice, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQIODevice_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QIODevice, s: cstring, c: cstring): string =

  let v_ms = fcQIODevice_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QIODevice, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQIODevice_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc readLine1*(self: QIODevice, maxlen: clonglong): seq[byte] =

  var v_bytearray = fcQIODevice_readLine1(self.h, maxlen)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc callVirtualBase_metacall(self: QIODevice, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQIODevice_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QIODevicemetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QIODevice, slot: proc(super: QIODevicemetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QIODevicemetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQIODevice_override_virtual_metacall(self.h, cast[int](addr tmp[]))
